Related fdo#33484: Terminate OfficeIPCThread by closing the accepting pipe

... (and setting mbDowning to indicate an error returned from accept() is due to
termination) instead of setting up an extra pipe connection to send an
"InternalIPC::TerminateThread" message (which allegedly caused deadlocks, see
<https://gerrit.libreoffice.org/#/c/1311/> "Change Idf933915: office ipc: use
timeout pipe feature when connecting to self").

(cherry picked from commit 4ce2602befd59e69264d8e4ced8730b40c2b947c)
Conflicts:
	desktop/source/app/officeipcthread.cxx
	desktop/source/app/officeipcthread.hxx

(cherry picked from commit 6527b8a135c20e223a6fcf7c49835205a99ff02a)

Change-Id: Id302ca13112fc409685e7665b38f1030704a0ccf